# data-platform-on-premise

./: .gitignore  LICENSE  README.md  USAGE.md  agents_spefication.md  pyproject.toml
.claude/: settings.json
.claude/commands/: README.md
.claude/kb/: README.md  _index.yaml
.claude/sdd/: README.md  _index.md
.github/workflows/: ci.yml  release.yml
agents/: config.py  graph.py  observability.py  port_forward.py  requirements.txt  run_e2e.py  state.py
agents/data_source/: agent.py  tools.py
agents/gold/: agent.py  tools.py
agents/infrastructure/: agent.py  tools.py
agents/orchestrator/: router.py
agents/reporter/: agent.py  tools.py
agents/spark_processing/: agent.py  tools.py
cluster/: bootstrap.sh  kind-config.yaml  teardown.sh
contracts/: customers.yaml  orders.yaml
dags/: gold_dbt_dag.py  silver_processing_dag.py
dags/templates/: silver-batch-app.yaml
dbt/: dbt_project.yml
dbt/models/: sources.yml
dbt/profiles/: profiles.yml
docker/kafka-connect/: Dockerfile
docker/spark/: Dockerfile
gitops/apps/: airflow-app.yaml  chainlit-app.yaml  kafka-cluster-app.yaml  minio-app.yaml  nessie-app.yaml  ollama-app.yaml  openmetadata-app.yaml  openmetadata-deps-app.yaml  platform-manifests-app.yaml  spark-jobs-app.yaml  spark-operator-app.yaml  strimzi-operator-app.yaml  trino-app.yaml
gitops/bootstrap/: argocd-install.yaml  root-app.yaml
manifests/: namespaces.yaml
portal/: Dockerfile  app.py  requirements.txt
scripts/: bootstrap-cluster.sh  seed-postgres.sh  test-e2e.sh  test-platform.sh
validation/: validate.py
(+507 files in other folders)
